--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,61 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Bienvenido {{ user }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Información personal</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+
+      <!-- Nombre (animado al limpiar) -->
+      <ion-item [@inputSlide]="inputAnimState">
+        <ion-label position="floating">Nombre</ion-label>
+        <ion-input type="text" [(ngModel)]="firstName" name="firstName"></ion-input>
+      </ion-item>
+
+      <!-- Apellido (animado al limpiar) -->
+      <ion-item [@inputSlide]="inputAnimState">
+        <ion-label position="floating">Apellido</ion-label>
+        <ion-input type="text" [(ngModel)]="lastName" name="lastName"></ion-input>
+      </ion-item>
+
+     
+   <!-- Nivel de educación -->
+<ion-item>
+  <ion-label position="floating">Nivel de educación</ion-label>
+  <ion-select [(ngModel)]="education" name="education" interface="alert">
+    <ion-select-option value="Básica">Básica</ion-select-option>
+    <ion-select-option value="Media">Media</ion-select-option>
+    <ion-select-option value="Técnica">Técnica</ion-select-option>
+    <ion-select-option value="Universitaria">Universitaria</ion-select-option>
+    <ion-select-option value="Postgrado">Postgrado</ion-select-option>
+  </ion-select>
+</ion-item>
+
+
+      <!-- Fecha de nacimiento con MatDatepicker -->
+      <ion-item lines="none" class="mat-wrapper">
+        <mat-form-field appearance="fill" class="full-width">
+          <mat-label>Fecha de nacimiento</mat-label>
+          <input matInput [matDatepicker]="picker" [(ngModel)]="birthDate" name="birthDate" />
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </ion-item>
+
+      <!-- Botones Limpiar y Mostrar -->
+      <div class="action-buttons">
+        <ion-button expand="block" color="medium" (click)="onClear()">Limpiar</ion-button>
+        <ion-button expand="block" color="primary" (click)="onShow()">Mostrar</ion-button>
+      </div>
+
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
