--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,13 +1,38 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" >
+
+  <!-- Imagen del logo -->
+    <div class="logo-container">
+      <img src="../../assets/img/logo.png" alt="Logo" class="logo">
+   </div>
+
+<ion-card >
+    <ion-card-header>
+      <ion-card-title>Mi primera App</ion-card-title>
+    </ion-card-header>
+
+     <ion-card-content>
+
+        <ion-item>
+          <ion-label position="floating">Usuario</ion-label>
+          <ion-input [(ngModel)]="email" type="text"></ion-input>
+        </ion-item>
+
+        <ion-item>
+         <ion-label position="floating">Contraseña</ion-label>
+          <ion-input [(ngModel)]="password"  type="password"></ion-input>
+        </ion-item>
+         
+        <ion-button expand="block" (click)="login()" >Iniciar Sesión</ion-button> 
+
+     </ion-card-content>
+
+
+</ion-card>
+ 
 </ion-content>
